started fetching json data

--- a/index.html
+++ b/index.html
@@ -20,4 +20,9 @@
         </div>
         <button>Submit</button>
     </form>
+
+    <img src="" id="dog-image">
 </div>
+<script src="js.js"></script>
+</body>
+</html>
