more styling and image added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </div>
         <button>Submit</button>
     </form>
-
-    <img src="" id="dog-image">
+</div>
+<div class="image-container">
+    <img id="dog-image" src="">
 </div>
 <script src="js.js"></script>
 </body>
