styling and random dog image added

--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
     <title>API</title>
 </head>
 <body>
-
-<div class="container" id="container">        
-    <div class="header">
-        <h3> Enter your name for a suprise</h3>
-    </div>
-    <form class="form">
-        <div class="form-control">
-            <label for="username">Name</label>
-			<input type="text" placeholder="nassar" id="username" />
+    <div class="container" id="container">        
+        <div class="header">
+            <h3> Enter your name for a suprise</h3>
         </div>
-        <button>Submit</button>
-    </form>
-</div>
-<div class="image-container">
-    <img id="dog-image" src="">
-</div>
-<script src="js.js"></script>
+        <form class="form">
+            <div class="form-control">
+                <label for="username">Name</label>
+                <input type="text" placeholder="nassar" id="username" />
+            </div>
+            <button>Submit</button>
+        </form>
+    </div>
+    <div class="image-container">
+        <img id="dog-image" src="test.png">
+    </div>
+    <script src="js.js"></script>
 </body>
 </html>
