--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
         <div class="header">
             <h3> Enter your name for a suprise</h3>
         </div>
-        <form class="form">
+        <div class="form">
             <div class="form-control">
-                <label for="username">Name</label>
-                <input type="text" placeholder="nassar" id="username" />
+                <label for="name">Name</label>
+                <input type="text" placeholder="nassar" id="name" />
             </div>
-            <button>Submit</button>
-        </form>
+            <button id="submit" class="" href="#">Submit</button>
+        </div>
     </div>
+
     <div class="image-container">
-        <img id="dog-image" src="test.png">
+        <img id="dog-image" src="">
     </div>
     <script src="js.js"></script>
 </body>
