added new form and switching functionality

--- a/index.html
+++ b/index.html
@@ -17,12 +17,24 @@
             <div class="form-control">
                 <label for="name">Name</label>
                 <input type="text" placeholder="nassar" id="name" required>
-                <div class="error-message" id="error-message">
+                <div class="error-message hidden" id="error-message">
                     <i class="fa fa-exclamation-circle"></i>
                     <small class="red">Insert a proper name!</small>
                 </div>   
             </div>
             <button id="submit" class="" href="#">Submit</button>
+        </div>
+    </div>
+
+    <div class="container hidden" id="second-container">     
+        <div class="header">
+            <h3> Predictions from your name </h3>
+        </div>
+        <div class="form">
+            <div class="form-control">
+                <span class="">Gender:</span>
+            </div>
+            <button id="back" class="" href="#">Back</button>
         </div>
     </div>
 
