adding prediction form html and logic

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form">
             <div class="form-control">
-                <span class="">Gender:</span>
+                <span id="gender-span">Gender:</span>
             </div>
             <button id="back" class="" href="#">Back</button>
         </div>
