adding nationality functionality

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
             <div class="form-control">
                 <span id="gender-span">Gender:</span>
             </div>
+            <div class="form-control">
+                <span id="nation-span1">Nation:</span>
+            </div>
+            <div class="form-control">
+                <span id="nation-span2">Nation:</span>
+            </div>
             <button id="back" class="" href="#">Back</button>
         </div>
     </div>
