nationality prediction logic implemented

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <div class="form-control">
                 <span id="nation-span2">Nation:</span>
             </div>
+            <div class="form-control">
+                <span id="age-span">Age:</span>
+            </div>
             <button id="back" class="" href="#">Back</button>
         </div>
     </div>
