code cleanup and styling

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </div>
 
     <div class="image-container">
-        <div class="header-img text-center">
-            <h3> Random Doge Image <span id="refresh" class="refresh"><img width="40px" height="40px" src="./assets/refresh-icon.svg"></span></h3>
+        <div class="header-img">
+            <h3 class=""> Random Doge Image <span id="refresh" class="refresh"><img width="40px" height="40px" src="./assets/refresh-icon.svg"></span></h3>
         </div>
         <img id="dog-image" src="">
     </div>
