final comments and code cleanup

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <small class="red">Insert a proper name!</small>
                 </div>   
             </div>
-            <button id="submit" class="" href="#">Submit</button>
+            <button id="submit" href="#">Submit</button>
         </div>
     </div>
     <!--Main form block END-->
@@ -47,7 +47,7 @@
             <div class="form-control">
                 <span id="age-span">Age:</span>
             </div>
-            <button id="back" class="" href="#">Back</button>
+            <button id="back" href="#">Back</button>
         </div>
     </div>
     <!--Results form block END-->
