hiding and showing forms -bonus-

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <small class="red">Incorrect username or password</small>
                 </div>     
             </div>
+            <a id="gotoregister">Create an account</a>
             <button id="login" href="#">Login</button>
         </div>
     </div>
@@ -47,6 +48,7 @@
                     <small class="green">Successfully registered!</small>
                 </div>     
             </div>
+            <a id="gotologin">Login</a>
             <button id="register" href="#">Register</button>
         </div>
     </div>
