login/register functionality finished -bonus-

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!--Login form block START-->
-    <div class="container" id="container">     
+    <div class="container" id="login-form">     
         <div class="header">
             <h3> Login below: </h3>
         </div>
@@ -33,7 +33,7 @@
     <!--Login form block END-->
 
     <!--Register block START-->
-    <div class="container" id="container">     
+    <div class="container hidden" id="register-form">     
         <div class="header">
             <h3> Register below: </h3>
         </div>
