code cleanup and small features added -bonus-

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <small class="red">Incorrect username or password</small>
                 </div>     
             </div>
-            <a id="gotoregister">Create an account</a>
             <button id="login" href="#">Login</button>
+            <button id="gotoregister" href="#">Create an account</button>
         </div>
     </div>
     <!--Login form block END-->
@@ -48,7 +48,7 @@
                     <small class="green">Successfully registered!</small>
                 </div>     
             </div>
-            <a id="gotologin">Login</a>
+            <a id="gotologin">Already have an account?</a>
             <button id="register" href="#">Register</button>
         </div>
     </div>
